# raytracer

./: CMakeLists.txt  config.h.in
dependencies/easylogging/: CMakeLists.txt  configuration.conf  easylogging++.h
include/: Camera.hpp  Color.hpp  FilePathManager.hpp  Hittable.hpp  HittableList.hpp  Interval.hpp  Logger.hpp  Ray.hpp  Sphere.hpp  Utility.hpp  Vec3.hpp
main/: main.cpp
src/: Color.cpp
